Changelog
=========

1.0b8 - unreleased
------------------
- Adding max-width for the language selector, so it works even with
  a ridiculous amount of languages. 
  This fixes http://dev.plone.org/plone/ticket/10452.
  [limi]
  
- Improved default rendering for Python code listings when using the
  syntax coloring, and improved the overall typography for code.
  This fixes http://dev.plone.org/plone/ticket/10692.
  [limi]
  
- Adding eventDetails styling and vertical table styles, this fixes 
  http://dev.plone.org/plone/ticket/10540.
  [limi]

- Lining up the edges of the main layout elements, this fixes
  http://dev.plone.org/plone/ticket/10465.
  [limi]

- Increased space between icons in the sprite to 200px to make collisions
  unlikely. This fixes http://dev.plone.org/plone/ticket/10633.
  [limi]

- Only add content type icons when they are enabled.
  Fixes http://dev.plone.org/plone/ticket/10541
  [davisagli]

- Remove the sprited icons for the file and image content types, to avoid
  double icons. Fixes http://dev.plone.org/plone/ticket/10501.
  [davisagli]

- Improved printing: hide some UI, better document and listing views
  [tdesvenain]

- Restore some of the headline/description styling that was lost when
  Denys' branch was merged.
  [limi]

- Adding a border to the dialog boxes, so it doesn't appear borderless on
  browsers that don't support box-shadow, like Internet Explorer.
  Fixes http://dev.plone.org/plone/ticket/10630.
  [limi]

1.0b7 - 2010-05-31
------------------

- Improved typography and vertical rhythm of the theme to improve UX.
  [spliter]

- Moved overlay close button to upper-left to get it off the vertical
  scrollbar when a an ajax overlay is longer than the viewport.
  [stevem]

- Set overflow-y:auto on ajax overlays to support forms longer than the
  viewport.
  [stevem]

1.0b6 - 2010-05-03
------------------

- Remove styling of path_bar. Breadcrumbs should now behave in a manner
  similar to that of Plone 3.
  [esteele]
