@@ -383,6 +383,10 @@ a.managePortletsFallback {
 	line-height: 2em;
 }
 
+#visual-portal-wrapper dl.portletCalendar dd {
+	padding: 0;
+}
+
 #dashboard-portlets1,
 #dashboard-portlets2,
 #dashboard-portlets3,
@@ -1342,6 +1346,41 @@ dd.image-caption {
 }
 #dashboard-actions ul {
     margin-left: 0;
+}
+
+#dashboard {
+	font-size: 125%;
+	line-height: 1em;
+}
+
+#dashboard dd {
+	margin: 0;
+}
+
+
+#dashboard dl.portlet a:link {
+	border-bottom: none;
+}
+
+#dashboard-portlets1,
+#dashboard-portlets2,
+#dashboard-portlets3 {
+    float:left;
+    width:23%;
+    padding:0.7em 1.3em 0 0;
+}
+
+#dashboard-portlets4 {
+    float:left;
+    width:23%;
+    padding-top:0.7em;
+}
+
+#dashboard-portlets1 dl.portlet,
+#dashboard-portlets2 dl.portlet,
+#dashboard-portlets3 dl.portlet,
+#dashboard-portlets4 dl.portlet {
+    margin-bottom:1.5em;
 }
 
 /* @end */
